--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,9 @@
 
                     <a href="contact.html" class="text-gray-600 hover:text-iatp-primary transition-colors font-medium">Contact</a>
 
-                    <button class="magnetic-btn px-8 py-3 bg-gradient-to-r from-iatp-primary to-iatp-secondary text-white rounded-full font-semibold shadow-lg shadow-iatp-primary/30 hover:shadow-xl hover:shadow-iatp-primary/40 transition-all relative z-10">
+                    <a href="contact.html" class="magnetic-btn px-8 py-3 bg-gradient-to-r from-iatp-primary to-iatp-secondary text-white rounded-full font-semibold shadow-lg shadow-iatp-primary/30 hover:shadow-xl hover:shadow-iatp-primary/40 transition-all relative z-10">
                         Member Login
-                    </button>
+                    </a>
                 </div>
 
                 <button class="md:hidden text-gray-900" id="mobile-menu-btn">
@@ -505,10 +505,10 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Services</h4>
                     <ul class="space-y-3 text-gray-400">
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Parts Pooling</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Line Maintenance</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Aircraft Recovery</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Equipment Pooling</a></li>
+                        <li><a href="why-join-IATP.html#parts-pooling" class="hover:text-iatp-primary transition-colors">Parts Pooling</a></li>
+                        <li><a href="why-join-IATP.html#line-maintenance" class="hover:text-iatp-primary transition-colors">Line Maintenance</a></li>
+                        <li><a href="why-join-IATP.html#aircraft-recovery" class="hover:text-iatp-primary transition-colors">Aircraft Recovery</a></li>
+                        <li><a href="why-join-IATP.html#equipment-pooling" class="hover:text-iatp-primary transition-colors">Equipment Pooling</a></li>
                     </ul>
                 </div>
 
@@ -517,7 +517,7 @@
                     <ul class="space-y-3 text-gray-400">
                         <li><a href="about.html" class="hover:text-iatp-primary transition-colors">About Us</a></li>
                         <li><a href="events.html" class="hover:text-iatp-primary transition-colors">Events</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Membership</a></li>
+                        <li><a href="how-to-become-an-airline-member.html" class="hover:text-iatp-primary transition-colors">Membership</a></li>
                         <li><a href="contact.html" class="hover:text-iatp-primary transition-colors">Contact</a></li>
                     </ul>
                 </div>
