--- a/about.html
+++ b/about.html
@@ -129,9 +129,9 @@
 
                     <a href="contact.html" class="text-gray-600 hover:text-iatp-primary transition-colors font-medium">Contact</a>
 
-                    <button class="magnetic-btn px-8 py-3 bg-gradient-to-r from-iatp-primary to-iatp-secondary text-white rounded-full font-semibold shadow-lg shadow-iatp-primary/30 hover:shadow-xl hover:shadow-iatp-primary/40 transition-all relative z-10">
+                    <a href="contact.html" class="magnetic-btn px-8 py-3 bg-gradient-to-r from-iatp-primary to-iatp-secondary text-white rounded-full font-semibold shadow-lg shadow-iatp-primary/30 hover:shadow-xl hover:shadow-iatp-primary/40 transition-all relative z-10">
                         Member Login
-                    </button>
+                    </a>
                 </div>
 
                 <button class="md:hidden text-gray-900" id="mobile-menu-btn">
@@ -227,7 +227,7 @@
                     </div>
 
                     <!-- Contact Link -->
-                    <a href="#" class="flex items-center space-x-3 px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-menu-link">
+                    <a href="contact.html" class="flex items-center space-x-3 px-4 py-3 text-white text-lg font-semibold rounded-xl hover:bg-white/10 transition-all mobile-menu-link">
                         <span class="iconify text-xl" data-icon="ant-design:mail-outlined"></span>
                         <span>Contact</span>
                     </a>
@@ -991,13 +991,13 @@
             </p>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-6 reveal-up">
-                <button class="magnetic-btn px-10 py-4 bg-white text-iatp-primary rounded-full text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3 group">
+                <a href="how-to-become-an-airline-member.html" class="magnetic-btn px-10 py-4 bg-white text-iatp-primary rounded-full text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3 group">
                     <span>Become a Member</span>
                     <span class="iconify group-hover:translate-x-2 transition-transform" data-icon="ant-design:arrow-right-outlined"></span>
-                </button>
-                <button class="magnetic-btn px-10 py-4 bg-white/10 backdrop-blur-md border-2 border-white/30 text-white rounded-full text-lg font-bold hover:bg-white/20 transition-all">
+                </a>
+                <a href="why-join-IATP.html" class="magnetic-btn px-10 py-4 bg-white/10 backdrop-blur-md border-2 border-white/30 text-white rounded-full text-lg font-bold hover:bg-white/20 transition-all">
                     Learn More
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -1022,10 +1022,10 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Services</h4>
                     <ul class="space-y-3 text-gray-400">
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Parts Pooling</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Line Maintenance</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Aircraft Recovery</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Equipment Pooling</a></li>
+                        <li><a href="why-join-IATP.html#parts-pooling" class="hover:text-iatp-primary transition-colors">Parts Pooling</a></li>
+                        <li><a href="why-join-IATP.html#line-maintenance" class="hover:text-iatp-primary transition-colors">Line Maintenance</a></li>
+                        <li><a href="why-join-IATP.html#aircraft-recovery" class="hover:text-iatp-primary transition-colors">Aircraft Recovery</a></li>
+                        <li><a href="why-join-IATP.html#equipment-pooling" class="hover:text-iatp-primary transition-colors">Equipment Pooling</a></li>
                     </ul>
                 </div>
 
@@ -1033,9 +1033,9 @@
                     <h4 class="font-bold text-lg mb-6">Company</h4>
                     <ul class="space-y-3 text-gray-400">
                         <li><a href="about.html" class="hover:text-iatp-primary transition-colors">About Us</a></li>
-                        <li><a href="index.html" class="hover:text-iatp-primary transition-colors">Events</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Membership</a></li>
-                        <li><a href="#" class="hover:text-iatp-primary transition-colors">Contact</a></li>
+                        <li><a href="events.html" class="hover:text-iatp-primary transition-colors">Events</a></li>
+                        <li><a href="how-to-become-an-airline-member.html" class="hover:text-iatp-primary transition-colors">Membership</a></li>
+                        <li><a href="contact.html" class="hover:text-iatp-primary transition-colors">Contact</a></li>
                     </ul>
                 </div>
 
