--- a/contact.html
+++ b/contact.html
@@ -290,7 +290,7 @@
                         </div>
                         <h3 class="text-xl font-black text-gray-900 mb-4">Call Us</h3>
                         <p class="text-gray-600 mb-4">Monday to Friday, 9am to 5pm CET</p>
-                        <a href="tel:+3227620160" class="text-iatp-primary hover:underline font-semibold">+32 2 762 01 60</a>
+                        <a href="tel:+35226684184" class="text-iatp-primary hover:underline font-semibold">+352 2668 4184</a>
                     </div>
                 </div>
 
@@ -301,9 +301,10 @@
                             <span class="iconify text-white text-2xl" data-icon="ant-design:environment-outlined"></span>
                         </div>
                         <h3 class="text-xl font-black text-gray-900 mb-4">Visit Us</h3>
-                        <p class="text-gray-600 mb-4">IATP Headquarters</p>
+                        <p class="text-gray-600 mb-4">IATP Corporate Office</p>
                         <address class="text-iatp-primary font-semibold not-italic">
-                            Brussels, Belgium
+                            17 Rue Jean-Pierre Sauvage
+                            <br>L-2514, Luxembourg
                         </address>
                     </div>
                 </div>
@@ -525,7 +526,7 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
+                        <a href="https://www.linkedin.com/company/iatp-sa" target="_blank" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
                             <span class="iconify text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:linkedin-outlined"></span>
                         </a>
                     </div>
