--- a/events.html
+++ b/events.html
@@ -527,23 +527,23 @@
                     <ul class="space-y-3 mb-8">
                         <li class="flex items-center space-x-3">
                             <span class="iconify text-iatp-primary text-xl" data-icon="ant-design:file-pdf-outlined"></span>
-                            <a href="#" class="text-iatp-primary hover:underline font-medium">IATP Conference Schedule/Dress Code</a>
+                            <a href="https://www.iatp.com/P_Home/Conference/133rd%20IATP%20Conference/MLA_Schedule_16.01.26.pdf" target="_blank" class="text-iatp-primary hover:underline font-medium">IATP Conference Schedule/Dress Code</a>
                         </li>
                         <li class="flex items-center space-x-3">
                             <span class="iconify text-iatp-primary text-xl" data-icon="ant-design:file-pdf-outlined"></span>
-                            <a href="#" class="text-iatp-primary hover:underline font-medium">IATP Meetings Explanation</a>
+                            <a href="https://www.iatp.com/P_Home/Conference/133rd%20IATP%20Conference/IATP_Meetings_Explanation_revised_2025-12.pdf" target="_blank" class="text-iatp-primary hover:underline font-medium">IATP Meetings Explanation</a>
                         </li>
                         <li class="flex items-center space-x-3">
                             <span class="iconify text-iatp-primary text-xl" data-icon="ant-design:file-pdf-outlined"></span>
-                            <a href="#" class="text-iatp-primary hover:underline font-medium">IATP Meeting Access Matrix</a>
+                            <a href="https://www.iatp.com/P_Home/Conference/133rd%20IATP%20Conference/IATP_Meetings_Access_Matrix_revised_2025-11.pdf" target="_blank" class="text-iatp-primary hover:underline font-medium">IATP Meeting Access Matrix</a>
                         </li>
                         <li class="flex items-center space-x-3">
                             <span class="iconify text-iatp-primary text-xl" data-icon="ant-design:file-pdf-outlined"></span>
-                            <a href="#" class="text-iatp-primary hover:underline font-medium">Hotel Meeting Rooms Map</a>
+                            <a href="https://www.iatp.com/P_Home/Conference/133rd%20IATP%20Conference/Floor_plan_InterContinental.pdf" target="_blank" class="text-iatp-primary hover:underline font-medium">Hotel Meeting Rooms Map</a>
                         </li>
                         <li class="flex items-center space-x-3">
                             <span class="iconify text-iatp-primary text-xl" data-icon="ant-design:file-pdf-outlined"></span>
-                            <a href="#" class="text-iatp-primary hover:underline font-medium">Code of Conduct conference attendance</a>
+                            <a href="https://www.iatp.com/P_Home/Conference/133rd%20IATP%20Conference/Code%20of%20Conduct%20for%20IATP%20Conference%20Participants%202021.06.14.pdf" target="_blank" class="text-iatp-primary hover:underline font-medium">Code of Conduct conference attendance</a>
                         </li>
                     </ul>
 
@@ -589,7 +589,7 @@
                             <span class="iconify text-white text-2xl" data-icon="ant-design:file-protect-outlined"></span>
                         </div>
                         <h3 class="text-2xl font-black text-gray-900 mb-4">Visa Requirements</h3>
-                        <p class="text-sm text-gray-500 mb-4">Source: Government of Malta</p>
+                        <p class="text-sm text-gray-500 mb-4">Source: <a href="https://identita.gov.mt/" target="_blank" class="text-iatp-primary hover:underline">Government of Malta</a></p>
                         <p class="text-gray-600 leading-relaxed mb-4">
                             Non-EU citizens (also known as third-country nationals) may visit Malta by means of a Schengen visa, which allows free movement within the whole Schengen Zone to European Union Schengen members as well as EFTA Schengen members. A Schengen visa is valid for a maximum of 90 days within every six-month period starting from the date of entry.
                         </p>
@@ -1469,7 +1469,7 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
+                        <a href="https://www.linkedin.com/company/iatp-sa" target="_blank" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
                             <span class="iconify text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:linkedin-outlined"></span>
                         </a>
                     </div>
