--- a/why-join-IATP.html
+++ b/why-join-IATP.html
@@ -878,7 +878,7 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
+                        <a href="https://www.linkedin.com/company/iatp-sa" target="_blank" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
                             <span class="iconify text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:linkedin-outlined"></span>
                         </a>
                     </div>
