--- a/index.html
+++ b/index.html
@@ -494,12 +494,14 @@
                             </div>
                         </div>
 
-                        <!-- CTA Button -->
-                        <div class="text-center">
-                            <a href="why-join-IATP.html" class="magnetic-btn px-8 py-3 md:px-10 md:py-4 bg-white text-iatp-primary rounded-full text-base md:text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3 group mx-auto">
+                       
+                        <!-- CTA Buttons -->
+                        <div class="flex flex-col sm:flex-row items-center justify-center gap-4 md:gap-6 animate-fade-in" style="animation-delay: 0.2s;">
+                            <a href="why-join-IATP.html" class="magnetic-btn px-8 py-3 md:px-10 md:py-4 bg-white text-iatp-primary rounded-full text-base md:text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3 group">
                                 <span>Discover Our Network</span>
                                 <span class="iconify group-hover:translate-x-2 transition-transform" data-icon="ant-design:arrow-right-outlined"></span>
                             </a>
+                           
                         </div>
                     </div>
                 </div>
@@ -902,7 +904,7 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
+                        <a href="https://www.linkedin.com/company/iatp-sa" target="_blank" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-iatp-primary transition-all group">
                             <span class="iconify text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:linkedin-outlined"></span>
                         </a>
                     </div>
