--- a/about.html
+++ b/about.html
@@ -245,8 +245,11 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="relative pt-32 pb-24 bg-gradient-to-br from-iatp-primary to-iatp-secondary overflow-hidden">
-        
+    <section id="hero" class="relative pt-32 pb-32 animated-gradient-bg geometric-bg floating-orbs overflow-hidden">
+        <!-- Floating Orbs -->
+        <div class="floating-orb floating-orb-1"></div>
+        <div class="floating-orb floating-orb-2"></div>
+        <div class="floating-orb floating-orb-3"></div>
 
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center">
@@ -261,15 +264,15 @@
                     A convention of Airlines sharing Technical Resources to generate economic savings and support on time dispatch reliability and operational safety
                 </p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-4xl mx-auto">
-                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 transition-all">
+                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 hover:scale-105 transition-all">
                         <div class="text-4xl font-black text-white mb-2">130+</div>
                         <div class="text-white/80 text-sm">Member Airlines</div>
                     </div>
-                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 transition-all">
+                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 hover:scale-105 transition-all">
                         <div class="text-4xl font-black text-white mb-2">45+</div>
                         <div class="text-white/80 text-sm">Sponsored Airlines</div>
                     </div>
-                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 transition-all">
+                    <div class="bg-white/10 backdrop-blur-md border border-white/30 rounded-2xl p-6 stagger-item hover:bg-white/20 hover:scale-105 transition-all">
                         <div class="text-4xl font-black text-white mb-2">40+</div>
                         <div class="text-white/80 text-sm">OEM & Service Providers</div>
                     </div>
