--- a/contact.html
+++ b/contact.html
@@ -245,9 +245,11 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative pt-32 pb-20 overflow-hidden">
-        <!-- Background gradient -->
-        <div class="absolute inset-0 bg-gradient-to-br from-iatp-primary to-iatp-secondary"></div>
+    <section class="relative pt-32 pb-28 animated-gradient-bg geometric-bg floating-orbs overflow-hidden">
+        <!-- Floating Orbs -->
+        <div class="floating-orb floating-orb-1"></div>
+        <div class="floating-orb floating-orb-2"></div>
+        <div class="floating-orb floating-orb-3"></div>
 
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center mb-12 reveal-up">
@@ -255,10 +257,10 @@
                     <span class="iconify text-white text-xl" data-icon="ant-design:mail-outlined"></span>
                     <div class="text-white font-medium text-sm">GET IN TOUCH</div>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-black text-white mb-6 leading-tight">
+                <h1 class="text-5xl md:text-7xl font-black text-white mb-6 leading-tight animate-fade-in-up">
                     Contact Us
                 </h1>
-                <p class="text-xl text-white max-w-3xl mx-auto leading-relaxed">
+                <p class="text-xl text-white/90 max-w-3xl mx-auto leading-relaxed animate-fade-in-up" style="animation-delay: 0.1s;">
                     We're here to help. Reach out to us for inquiries, membership information, or any questions about IATP services.
                 </p>
             </div>
