--- a/events.html
+++ b/events.html
@@ -279,19 +279,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="relative pt-32 pb-20 overflow-hidden">
-        <!-- Background gradient -->
-        <div class="absolute inset-0 bg-gradient-to-br from-iatp-primary to-iatp-secondary"></div>
+    <section id="hero" class="relative pt-32 pb-28 animated-gradient-bg geometric-bg floating-orbs overflow-hidden">
+        <!-- Floating Orbs -->
+        <div class="floating-orb floating-orb-1"></div>
+        <div class="floating-orb floating-orb-2"></div>
+        <div class="floating-orb floating-orb-3"></div>
 
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center mb-12 reveal-up">
                 <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30 animate-fade-in-down">
+                    <span class="iconify text-white" data-icon="ant-design:calendar-outlined"></span>
                     <div class="text-white font-medium text-sm">IATP EVENTS</div>
                 </div>
                 <h1 class="text-5xl md:text-7xl font-black text-white mb-6 leading-tight">
                     Events
                 </h1>
-                <p class="text-xl text-white max-w-4xl mx-auto leading-relaxed">
+                <p class="text-xl text-white/90 max-w-4xl mx-auto leading-relaxed">
                     The IATP Semi-annual Conference offers a multitude of events that allow attendees to connect with over 130 airlines from around the world. This unique venue gives you the opportunity to conduct your pooling business – whether it's spare parts or line maintenance – in the most efficient manner while allowing you to share your industry knowledge, network, reunite with colleagues, and much more!
                 </p>
             </div>
