--- a/pionairs.html
+++ b/pionairs.html
@@ -245,25 +245,28 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative pt-32 pb-24 bg-gradient-to-br from-iatp-primary to-iatp-secondary overflow-hidden">
-        
+    <section class="relative pt-32 pb-32 animated-gradient-bg geometric-bg floating-orbs overflow-hidden">
+        <!-- Floating Orbs -->
+        <div class="floating-orb floating-orb-1"></div>
+        <div class="floating-orb floating-orb-2"></div>
+        <div class="floating-orb floating-orb-3"></div>
 
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center">
-                <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30">
+                <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30 animate-fade-in-down">
                     <span class="iconify text-white" data-icon="ant-design:team-outlined"></span>
                     <span class="text-white font-medium text-sm">Established 1984 • Celebrating 40 Years</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-black text-white mb-8 leading-tight">
+                <h1 class="text-5xl md:text-7xl font-black text-white mb-8 leading-tight animate-fade-in-up">
                     IATP PIONAIRS Association
                 </h1>
-                <p class="text-2xl md:text-3xl text-white/95 max-w-4xl mx-auto leading-relaxed font-medium mb-6">
+                <p class="text-2xl md:text-3xl text-white/95 max-w-4xl mx-auto leading-relaxed font-medium mb-6 animate-fade-in-up" style="animation-delay: 0.1s;">
                     Preserving friendships and fostering continued contact among those who have served the IATP
                 </p>
-                <p class="text-lg text-white/80 max-w-2xl mx-auto">
+                <p class="text-lg text-white/80 max-w-2xl mx-auto animate-fade-in-up" style="animation-delay: 0.2s;">
                     Bringing together former IATP delegates to maintain the bonds forged through years of collaboration in aviation excellence
                 </p>
-                <div class="mt-10 inline-flex px-6 py-3 bg-white/10 backdrop-blur-md border border-white/30 rounded-full text-white/90 text-base items-center">
+                <div class="mt-10 inline-flex px-6 py-3 bg-white/10 backdrop-blur-md border border-white/30 rounded-full text-white/90 text-base items-center animate-fade-in-up" style="animation-delay: 0.3s;">
                     <span class="iconify mr-2" data-icon="ant-design:calendar-outlined"></span>
                     Issue: April 2023
                 </div>
