--- a/index.html
+++ b/index.html
@@ -509,11 +509,24 @@
 
         </div>
 
-        <!-- Pagination Dots -->
-        <div class="absolute bottom-12 md:bottom-24 left-1/2 transform -translate-x-1/2 z-30 flex space-x-3">
-            <button class="carousel-dot active w-3 h-3 rounded-full bg-white/80 hover:bg-white transition-all" data-slide="0"></button>
-            <button class="carousel-dot w-3 h-3 rounded-full bg-white/40 hover:bg-white/60 transition-all" data-slide="1"></button>
-            <button class="carousel-dot w-3 h-3 rounded-full bg-white/40 hover:bg-white/60 transition-all" data-slide="2"></button>
+        <!-- Carousel Navigation -->
+        <div class="absolute bottom-12 md:bottom-24 left-1/2 transform -translate-x-1/2 z-30 flex items-center space-x-4">
+            <!-- Left Arrow -->
+            <button class="carousel-arrow carousel-prev w-10 h-10 md:w-12 md:h-12 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Previous slide">
+                <span class="iconify text-white text-lg md:text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:left-outlined"></span>
+            </button>
+
+            <!-- Pagination Dots -->
+            <div class="flex items-center space-x-3 px-4 py-2 bg-black/20 backdrop-blur-md rounded-full border border-white/20">
+                <button class="carousel-dot active w-3 h-3 md:w-4 md:h-4 rounded-full bg-white shadow-lg shadow-white/50 hover:scale-110 transition-all" data-slide="0"></button>
+                <button class="carousel-dot w-3 h-3 md:w-4 md:h-4 rounded-full bg-white/50 hover:bg-white/70 hover:scale-110 transition-all" data-slide="1"></button>
+                <button class="carousel-dot w-3 h-3 md:w-4 md:h-4 rounded-full bg-white/50 hover:bg-white/70 hover:scale-110 transition-all" data-slide="2"></button>
+            </div>
+
+            <!-- Right Arrow -->
+            <button class="carousel-arrow carousel-next w-10 h-10 md:w-12 md:h-12 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Next slide">
+                <span class="iconify text-white text-lg md:text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:right-outlined"></span>
+            </button>
         </div>
 
         <!-- Scroll Indicator -->
