--- a/news.html
+++ b/news.html
@@ -245,17 +245,22 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="relative pt-32 pb-24 bg-gradient-to-br from-iatp-primary to-iatp-secondary overflow-hidden">
+    <section id="hero" class="relative pt-32 pb-32 animated-gradient-bg geometric-bg floating-orbs overflow-hidden">
+        <!-- Floating Orbs -->
+        <div class="floating-orb floating-orb-1"></div>
+        <div class="floating-orb floating-orb-2"></div>
+        <div class="floating-orb floating-orb-3"></div>
+
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center">
                 <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30 animate-fade-in-down">
                     <span class="iconify text-white" data-icon="ant-design:notification-outlined"></span>
                     <span class="text-white font-medium text-sm">Latest Updates</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-black text-white mb-8 leading-tight animate-fade-in-up">
+                <h1 class="text-5xl md:text-7xl font-black text-white mb-6 leading-tight animate-fade-in-up">
                     News & Press
                 </h1>
-                <p class="text-xl md:text-2xl text-blue-50 max-w-3xl mx-auto">
+                <p class="text-xl md:text-2xl text-white/90 max-w-3xl mx-auto animate-fade-in-up" style="animation-delay: 0.1s;">
                     Stay informed about the latest developments, announcements, and press coverage from IATP
                 </p>
             </div>
