--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
       <!-- Navigation -->
     <nav class="fixed w-full z-50 bg-white/95 backdrop-blur-xl shadow-lg transition-all duration-500" id="navbar">
-        <div class="max-w-7xl mx-auto px-6 py-6">
+        <div class="max-w-7xl mx-auto px-4 py-3 md:px-6 md:py-6">
             <div class="flex items-center justify-between">
                 <a href="index.html" class="flex items-center space-x-3 group">
-                    <img src="img/IATP-logo.png" alt="IATP Logo" class="h-14 w-auto transition-transform group-hover:scale-105">
+                    <img src="img/IATP-logo.png" alt="IATP Logo" class="h-10 md:h-14 w-auto transition-transform group-hover:scale-105">
                 </a>
 
                 <div class="hidden md:flex items-center space-x-8">
@@ -247,7 +247,7 @@
 
 
     <!-- Hero Section with Carousel -->
-    <section class="relative min-h-screen flex items-center justify-center overflow-hidden pt-24 pb-32 md:py-0">
+    <section class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20 pb-24 md:py-0">
 
         <!-- Carousel Container -->
         <div class="hero-carousel w-full h-full absolute inset-0">
@@ -289,7 +289,7 @@
                         </p>
 
                         <!-- Stats Grid with Staggered Animation -->
-                        <div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-6 max-w-5xl mx-auto pb-6 md:pb-12">
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-6 max-w-5xl mx-auto pb-16 md:pb-12">
                             <div class="text-center stagger-item">
                                 <div class="w-12 h-12 md:w-16 md:h-16 mx-auto bg-white/20 backdrop-blur-md rounded-2xl flex items-center justify-center mb-2 md:mb-3 hover:scale-110 transition-transform">
                                     <span class="iconify text-white text-xl md:text-2xl" data-icon="ant-design:team-outlined"></span>
@@ -350,7 +350,7 @@
                 </div>
 
                 <!-- Content -->
-                <div class="max-w-7xl mx-auto px-6 relative z-20 h-full flex items-center pt-20 md:pt-0">
+                <div class="max-w-7xl mx-auto px-6 relative z-20 h-full flex items-center pt-28 md:pt-0">
                     <div class="w-full">
                         <!-- Section Header -->
                         <div class="text-center mb-3 md:mb-12">
@@ -446,7 +446,7 @@
                 </div>
 
                 <!-- Content -->
-                <div class="max-w-7xl mx-auto px-6 relative z-20 h-full flex items-center">
+                <div class="max-w-7xl mx-auto px-6 relative z-20 h-full pt-28 flex items-center">
                     <div class="w-full text-center">
                         <!-- Section Header -->
                         <div class="mb-8 md:mb-16">
@@ -496,12 +496,12 @@
 
                        
                         <!-- CTA Buttons -->
-                        <div class="flex flex-col sm:flex-row items-center justify-center gap-4 md:gap-6 animate-fade-in" style="animation-delay: 0.2s;">
+                        <div class="flex flex-col sm:flex-row items-center justify-center gap-4 md:gap-6 pb-16 md:pb-0 animate-fade-in" style="animation-delay: 0.2s;">
                             <a href="why-join-IATP.html" class="magnetic-btn px-8 py-3 md:px-10 md:py-4 bg-white text-iatp-primary rounded-full text-base md:text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3 group">
                                 <span>Discover Our Network</span>
                                 <span class="iconify group-hover:translate-x-2 transition-transform" data-icon="ant-design:arrow-right-outlined"></span>
                             </a>
-                           
+
                         </div>
                     </div>
                 </div>
@@ -509,11 +509,20 @@
 
         </div>
 
-        <!-- Carousel Navigation -->
-        <div class="absolute bottom-12 md:bottom-24 left-1/2 transform -translate-x-1/2 z-30 flex items-center space-x-4">
-            <!-- Left Arrow -->
-            <button class="carousel-arrow carousel-prev w-10 h-10 md:w-12 md:h-12 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Previous slide">
-                <span class="iconify text-white text-lg md:text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:left-outlined"></span>
+        <!-- Desktop Side Arrows (hidden on mobile) -->
+        <button class="carousel-arrow carousel-prev hidden md:flex absolute left-8 top-1/2 transform -translate-y-1/2 z-30 w-14 h-14 rounded-full bg-white/20 backdrop-blur-md border border-white/30 items-center justify-center hover:bg-white/40 hover:scale-110 transition-all group" aria-label="Previous slide">
+            <span class="iconify text-white text-2xl group-hover:scale-110 transition-transform" data-icon="ant-design:left-outlined"></span>
+        </button>
+
+        <button class="carousel-arrow carousel-next hidden md:flex absolute right-8 top-1/2 transform -translate-y-1/2 z-30 w-14 h-14 rounded-full bg-white/20 backdrop-blur-md border border-white/30 items-center justify-center hover:bg-white/40 hover:scale-110 transition-all group" aria-label="Next slide">
+            <span class="iconify text-white text-2xl group-hover:scale-110 transition-transform" data-icon="ant-design:right-outlined"></span>
+        </button>
+
+        <!-- Mobile & Tablet Navigation (arrows + dots together) -->
+        <div class="absolute bottom-4 md:bottom-24 left-1/2 transform -translate-x-1/2 z-30 flex items-center space-x-3">
+            <!-- Mobile Left Arrow -->
+            <button class="carousel-arrow carousel-prev md:hidden w-10 h-10 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Previous slide">
+                <span class="iconify text-white text-lg group-hover:scale-110 transition-transform" data-icon="ant-design:left-outlined"></span>
             </button>
 
             <!-- Pagination Dots -->
@@ -523,9 +532,9 @@
                 <button class="carousel-dot w-3 h-3 md:w-4 md:h-4 rounded-full bg-white/50 hover:bg-white/70 hover:scale-110 transition-all" data-slide="2"></button>
             </div>
 
-            <!-- Right Arrow -->
-            <button class="carousel-arrow carousel-next w-10 h-10 md:w-12 md:h-12 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Next slide">
-                <span class="iconify text-white text-lg md:text-xl group-hover:scale-110 transition-transform" data-icon="ant-design:right-outlined"></span>
+            <!-- Mobile Right Arrow -->
+            <button class="carousel-arrow carousel-next md:hidden w-10 h-10 rounded-full bg-white/20 backdrop-blur-md border border-white/30 flex items-center justify-center hover:bg-white/40 transition-all group" aria-label="Next slide">
+                <span class="iconify text-white text-lg group-hover:scale-110 transition-transform" data-icon="ant-design:right-outlined"></span>
             </button>
         </div>
 
